adding a new dimension to the prototype of Parallel Coordinates

--- a/ParallelCoordinatesETS_CITL.html
+++ b/ParallelCoordinatesETS_CITL.html
@@ -94,7 +94,7 @@ body.dark {
     });   
 
   // load csv file and create the chart
-  d3.tsv('data/sandbag/CITL_v19.csv', function(data) {
+  d3.tsv('data/CITL_v19.csv', function(data) {
     console.log("reading ETS data file...");
     // slickgrid needs each data element to have an id
     data.forEach(function(d,i) {
