--- a/EUTLdbDashboard.html
+++ b/EUTLdbDashboard.html
@@ -12,16 +12,16 @@
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="./css/bootstrap.css" rel="stylesheet">
 
     <!-- Timeline CSS -->
-    <link href="css/timeline.css" rel="stylesheet">
+    <link href="./css/timeline.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="./css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
 
@@ -180,18 +180,18 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="./js/jquery-1.9.1.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.js"></script>
+    <script src="./js/bootstrap.js"></script>
 
-    <script src="js/d3.min.js"></script>
+    <script src="./js/d3.min.js"></script>
 
-    <script src="js/dimple.v2.1.6.min.js"></script>
+    <script src="./js/dimple.v2.1.6.min.js"></script>
     
-    <script src="js/EUTLdbREST.js"></script>
+    <script src="./js/EUTLdbREST.js"></script>
 
-    <script src="js/EUTLdbDashboard.js"></script>
+    <script src="./js/EUTLdbDashboard.js"></script>
 
 </body>
 
