some updates on EU ETS dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -82,7 +82,7 @@
                                     <a id="eu_wide_chart_button" href="#">EU wide chart</a>
                                 </li>
                                 <li>
-                                    <a id="multi_line_chart_button" href="#">Country/sector chart</a>
+                                    <a id="country_sector_chart_button" href="#">Country/sector chart</a>
                                 </li>
                                 <li>
                                     <a id="stacked_bar_chart_button" href="#">Stacked bar chart</a>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <!-- /.panel-heading -->
-                        <div id="line_chart" class="panel-body" style="height:350px">
+                        <div id="eu_wide_chart" class="panel-body" style="height:350px">
                             <div id="spinner_div" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
                             </div>     
