--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -172,7 +172,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div id="eu_wide_chart" class="panel-body" style="height:350px">
-                            <div id="spinner_div" class="loading" style="display:none">
+                            <div id="eu_wide_spinner_div" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
                             </div>     
                         </div>
