added accumulated balance series

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -166,6 +166,9 @@
                                         <div class="checkbox">
                                           <label><input onclick="filterDataForEUWideChart()" id="legal_cap_eu_wide_checkbox" type="checkbox" checked="checked">Legal Cap</label>
                                         </div>
+                                        <div class="checkbox">
+                                          <label><input onclick="filterDataForEUWideChart()" id="accumulated_balance_eu_wide_checkbox" type="checkbox" checked="checked">Accumulated Balance</label>
+                                        </div>
                                     </div> 
                                 </div>
                             </div>
