a few updates on the Dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -327,8 +327,7 @@
                          
                      </p>
                      <ul style="list-style-type:square">
-                         <li>The ETS data shown in this tool was extracted from the European Commission’s <a href="http://ec.europa.eu/environment/ets/">EUTL</a> on <strong>May 3rd 2016</strong>. </li>
-                         <li>Aircraft operators data is not included or taken into account in any way for any of the charts made available as part of the interface.</li>
+                         <li>The ETS data shown in this tool was extracted from the European Commission’s <a href="http://ec.europa.eu/environment/ets/">EUTL</a> on <strong>June 20th 2016</strong>. </li>     
                          <li>When calculating offset values only those with unit types <i>CER</i> or <i>ERU</i> are used.</li>
                      </ul>
                      <h4>Licensing</h4>
