--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -225,13 +225,13 @@
                             <div class="pull-right">
                                 <div class="btn-group">
                                     <button id="map_button" type="button" class="btn btn-default btn-xs " 
-                                            onclick="onMapButtonClick()">
+                                            onclick="onMapButtonClick()" title="Show instalaltions map">
                                         <i class="fa fa-map-marker fa-fw"></i>
                                     </button>                                     
                                 </div>
                                 <div class="btn-group">
                                     <button id="export_line_chart_button" type="button" class="btn btn-default btn-xs " 
-                                            onclick="onExportLineChartButtonClick()">
+                                            onclick="onExportLineChartButtonClick()" title="Export data to TSV file">
                                         Export
                                     </button>                                     
                                 </div>
@@ -302,8 +302,7 @@
                             <span id="stackedBarChartPerPeriodTitleText">Verified Emissions per period</span> 
                             <div class="pull-right">
                                 <div class="btn-group">
-                                    <button id="export_verified_emissions_chart_button" type="button" class="btn btn-default btn-xs " 
-                                            onclick="onExportVerifiedEmissionsChartButtonClick()">
+                                    <button id="export_verified_emissions_chart_button" type="button" class="btn btn-default btn-xs" onclick="onExportVerifiedEmissionsChartButtonClick()" title="Export data to TSV file">
                                         Export
                                     </button>                                     
                                 </div>
