minor updates on the Dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -163,7 +163,7 @@
                                 </div>  
                                 <div class="btn-group">                                                                      
                                     <button id="export_eu_wide_chart" type="button" class="btn btn-default btn-xs " 
-                                            onclick="onExportEUWideButtonClick()">
+                                            onclick="onExportEUWideButtonClick()" title="Export data to TSV file">
                                         Export
                                     </button>                                     
                                 </div>
