misspell fixed at Dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -226,7 +226,7 @@
                             <div class="pull-right">
                                 <div class="btn-group">
                                     <button id="map_button" type="button" class="btn btn-default btn-xs " 
-                                            onclick="onMapButtonClick()" title="Show instalaltions map">
+                                            onclick="onMapButtonClick()" title="Show installations map">
                                         <i class="fa fa-map-marker fa-fw"></i>
                                     </button>                                     
                                 </div>
