minor fix in dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -274,8 +274,9 @@
                             </div> 
                         </div>                        
                         <!-- /.panel-body -->
+                    </div>
+                    <!-- /.col-md 12 -->
                 </div>
-                <!-- /.col-md 12 -->
             </div>
             <!-- /.row -->
             <div id="periods_combo_box_row" class="row" style="display: none">
