--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <!-- /.panel-heading -->
-                        <div id="eu_wide_chart" class="panel-body" style="height:350px">
+                        <div id="eu_wide_chart" class="panel-body" style="height:400px">
                             <div id="eu_wide_spinner_div" class="loading" style="display:none">
                                 <i class="fa fa-refresh fa-spin fa-3x fa-fw margin-bottom"></i>
                             </div>     
@@ -230,7 +230,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div id="line_chart" style="height:350px">                                    
+                            <div id="line_chart" style="height:400px">                                    
                             </div>
                             <div id="map_div"style="display:none">
                             </div> 
@@ -268,10 +268,70 @@
                                         Export
                                     </button>                                     
                                 </div>
+                                <div class="btn-group">
+                                    <button id="filter_stacked_bar_chart_dropdown" type="button" class="btn btn-default btn-xs dropdown-toggle" >
+                                        Filter chart
+                                        <span class="caret"></span>
+                                    </button>
+                                    <div class="list-group dropdown-menu pull-right" data-toggle="items"  >                                                                                
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="aviation_checkbox" type="checkbox" checked="checked">
+                                          <label for="aviation_checkbox">Aviation</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="cement_and_lime_checkbox" type="checkbox" checked="checked">
+                                          <label for="cement_and_lime_checkbox">Cement and Lime</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="ceramics_checkbox" type="checkbox" checked="checked">
+                                          <label for="ceramics_checkbox">Ceramics</label>
+                                        </div>     
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="chemicals_checkbox" type="checkbox" checked="checked">
+                                          <label for="chemicals_checkbox">Chemicals</label>
+                                        </div> 
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="coke_ovens_checkbox" type="checkbox" checked="checked">
+                                          <label for="coke_ovens_checkbox">Coke ovens</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="combustion_checkbox" type="checkbox" checked="checked">
+                                          <label for="combustion_checkbox">Combustion</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="glass_checkbox" type="checkbox" checked="checked">
+                                          <label for="glass_checkbox">Glass</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="iron_and_steel_checkbox" type="checkbox" checked="checked">
+                                          <label for="iron_and_steel_checkbox">Iron and steel</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="metal_ore_roasting_checkbox" type="checkbox" checked="checked">
+                                          <label for="metal_ore_roasting_checkbox">Metal ore roasting</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="mineral_oil_checkbox" type="checkbox" checked="checked">
+                                          <label for="mineral_oil_checkbox">Mineral oil</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="non_ferrous_metals_checkbox" type="checkbox" checked="checked">
+                                          <label for="non_ferrous_metals_checkbox">Non ferrous metals</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="other_checkbox" type="checkbox" checked="checked">
+                                          <label for="other_checkbox">Other</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForStackedBarChart()" id="pulp_and_paper_checkbox" type="checkbox" checked="checked">
+                                          <label for="pulp_and_paper_checkbox">Pulp and paper</label>
+                                        </div>
+                                    </div> 
+                                </div>
                             </div>
                         </div>
                         <!-- /.panel-heading -->
-                        <div id="stacked_bar_chart" class="panel-body" style="height:350px">
+                        <div id="stacked_bar_chart" class="panel-body" style="height:400px">
                             <div id="offsets_warning_div" style="display:none">
                                 <p>
                                     <strong>Warning:</strong> Offsets data for periods 2013 onwards is not available with sectors granularity since the European Commission stopped sharing such information after 2012.
