a few modifications in the Dashboard

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -59,13 +59,16 @@
             <div class="navbar-header">
               <ul class="nav navbar-nav">
                 <li class="active">
-                  <a id="eu_wide_chart_button" href="#">EU wide chart</a>
+                  <a id="eu_wide_chart_button" href="#">EU wide</a>
                 </li>
                 <li>
-                    <a id="country_sector_chart_button" href="#">Country/sector chart</a>
+                    <a id="country_sector_chart_button" href="#">Country/sector</a>
                 </li>
                 <li>
-                    <a id="stacked_bar_chart_button" href="#">Stacked bar chart</a>
+                    <a id="country_sector_chart_button" href="#">Installations</a>
+                </li>
+                <li>
+                    <a id="stacked_bar_chart_button" href="#">Emissions/Allowances/Offsets</a>
                 </li>  
                 <li>
                   <a id="about_button" href="#"><i class="fa fa-edit fa-fw"></i>About</a>
