--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -102,11 +102,11 @@
             <!-- /.row -->
             <div class="row" id="countries_sectors_row" style="display: none">
                 <div class="col-xs-4">
-                    <select class="selectpicker" multiple id="countries_combobox" onchange="onComboBoxChange()" data-actions-box="true">
+                    <select class="selectpicker" multiple id="countries_combobox" onchange="onComboBoxChange()" data-actions-box="true" data-size="8">
                     </select> 
                 </div>
                 <div class="col-xs-4">
-                    <select id="sectors_combobox" onchange="onComboBoxChange()" class="selectpicker" multiple data-actions-box="true" width="fit">
+                    <select id="sectors_combobox" onchange="onComboBoxChange()" class="selectpicker" multiple data-actions-box="true" width="fit" data-size="8">
                     </select>
                 </div>  
                 <div class="col-xs-4">
@@ -121,23 +121,24 @@
             <div class="row" id="eu_wide_chart_row">
                 <div class="col-md-12">
                     <div class="panel panel-default">
-                        <div class="panel-heading">
+                        <div style="height:50px;" class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> EU wide chart
                             <div class="pull-right">
-                                <div class="checkbox btn-group">
-                                    <input onclick="includeAviationDataCheckboxClick()" type="checkbox" id="include_aviation_data_eu_wide_checkbox" checked="checked">
-                                    <label for="include_aviation_data_eu_wide_checkbox">
-                                        Include Aviation data
-                                    </label>
+                                <div class="btn-group" >
+                                        <select id="include_aviation_combobox" onchange="onIncludeAviationComboboxChange()" class="selectpicker"  width="fit">
+                                        <option >Include Aviation</option>
+                                        <option>Exclude Aviation</option>
+                                        <option>Show only Aviation</option>
+                                    </select>
                                 </div>  
                                 <div class="btn-group">                                                                      
-                                    <button id="export_eu_wide_chart" type="button" class="btn btn-default btn-xs " 
+                                    <button id="export_eu_wide_chart" type="button" class="btn btn-default" 
                                             onclick="onExportEUWideButtonClick()" title="Export data to TSV file">
                                         Export
                                     </button>                                     
                                 </div>
                                 <div class="btn-group">
-                                    <button id="filter_eu_wide_chart_dropdown" type="button" class="btn btn-default btn-xs dropdown-toggle" >
+                                    <button id="filter_eu_wide_chart_dropdown" type="button" class="btn btn-default dropdown-toggle" >
                                         Filter chart
                                         <span class="caret"></span>
                                     </button>
@@ -249,9 +250,17 @@
             <!-- /.row -->
             <div id="periods_combo_box_row" class="row" style="display: none">
                 <div class="col-xs-4 " >
-                    <select id="periods_combobox" class="selectpicker" onchange="onPeriodsComboboxChange()"  >
+                    <select id="periods_combobox" class="selectpicker" onchange="onPeriodsComboboxChange()"  data-size="8">
                     </select>
-                </div>                  
+                </div>  
+                <div class="col-xs-4">
+                    <select class="selectpicker" multiple id="countries_filter_combobox" onchange="filterDataForStackedBarChart()" data-actions-box="true" data-size="8">
+                    </select> 
+                </div>
+                <div class="col-xs-4">
+                    <select class="selectpicker" multiple id="sectors_filter_combobox" onchange="filterDataForStackedBarChart()" data-actions-box="true" data-size="8">
+                    </select> 
+                </div>
             </div>
             <!-- /.row -->
             <div id="stacked_bar_chart_row" class="row" style="display: none">
@@ -271,6 +280,7 @@
                                         Export
                                     </button>                                     
                                 </div>
+                                <!--
                                 <div class="btn-group">
                                     <button id="filter_stacked_bar_chart_dropdown" type="button" class="btn btn-default btn-xs dropdown-toggle" >
                                         Filter chart
@@ -331,6 +341,7 @@
                                         </div>
                                     </div> 
                                 </div>
+                                -->
                             </div>
                         </div>
                         <!-- /.panel-heading -->
