Minor change in About section

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -382,6 +382,9 @@
                         <li>
                             <p><strong><a href="https://github.com/Leaflet/Leaflet.markercluster">Leaflet.markercluster</a></strong> - <em>Marker Clustering plugin for Leaflet</em></p>
                         </li>
+                        <li>
+                            <p><strong><a href="https://github.com/NBTSolutions/Leaflet.Dialog">Leaflet.Dialog</a></strong></p>
+                        </li>                        
                     </ul> 
                     <h5><strong>Icons/Fonts</strong></h5>
                     <ul>
