Links added for Twitter and Github repo

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -85,8 +85,12 @@
                 <li>
                   <a id="contact_us_button" href="#"><i class="fa fa-envelope fa-fw"></i>Contact us</a>
                 </li>                            
+              </ul>    
+              <ul class="nav navbar-nav navbar-right" >
+                  <a href="https://twitter.com/sandbagorguk"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
+                  <a href="https://github.com/sandbag-climate/sandbag-climate.github.io"><i class="fa fa-github fa-lg fa-fw"></i></a>
+                  <a href="http://www.sandbag.org.uk"><img src="images/sandbag_logo_small.png"/></a>
               </ul> 
-              <a class="navbar-right" href="http://www.sandbag.org.uk"><img src="images/sandbag_logo_small.png"/></a>
             </div><!-- /.navbar-collapse -->          
             
           </div><!-- /.container-fluid -->
