--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -403,6 +403,24 @@
                     <br>
                  </div>  
                 <div class="col-lg-2"></div>
+            </div>        
+            <!-- /.row -->
+            <div id="error_row" class="row" style="display: none">
+                <div class="col-lg-3"></div>
+                 <div class="col-lg-6">
+                     <h2><i class="fa fa-cogs fa-fw"></i>Ooops!</h2>
+                     <p>
+                     The application could not connect to the server :(
+                     </p>
+                     <p>
+                     Please check that you are connected to the network and that your network is functioning correctly. Once you verify your connection is working refresh the page.
+                     </p>
+                     <p>
+                     If you keep experiencing problems the application might be under maintenance, in that case bear with us and come back later ;)     
+                     </p>
+                 </div>  
+                <div class="col-lg-3"></div>
+                <!-- /.col-md 12 -->
             </div>
             <!-- /.row -->
             <div id="contact_us_row" class="row" style="display: none" > 
